# HipHopAlbum_Wiki_Webscrape

./: albums.csv  albums.txt  main.py  pyproject.toml
website/: __init__.py  database.db  models.py  views.py
website/static/: style.css
website/templates/: about.html  base.html  home.html  list.html  list_all.html  search.html
